--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    steps: 
+      - uses: actions/checkout@v3
+      - name: mpm install and build webpack
+        run:
+          npm install
+          npm run build
+          
+  test:
+    runs-on:ubuntu-latest
 
     strategy:
       matrix:
@@ -28,5 +37,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: npm install, and test
+    - run: 
+        npm install
+        npm test
+      env:
+        CI: true
