--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,11 +23,12 @@ jobs:
         with: 
           name: webpack artifacts
           path: public/
+          needs: build
           
   test:
     runs-on:ubuntu-latest
 
-    strategy:
+    strategy: 
       matrix:
         node-version: [10.x, 12.x]
         os: [ubuntu-latest, windows-2016]
